Remove white shadow from contrxt menu label

--- a/src/codeOrchestra/colt/core/ui/style/main.css
+++ b/src/codeOrchestra/colt/core/ui/style/main.css
@@ -512,9 +512,9 @@
      -fx-background-color: #0066cc;
      -fx-text-fill: white; }
 
-.context-menu .menu-item:focused .label,
-.context-menu .menu-item:hover .label {
-    -fx-effect: null;
+.context-menu .menu-item:focused .text,
+.context-menu .menu-item:hover .text {
+    -fx-effect: dropshadow(gaussian, #0052b8,  0, 0, 0, -1px);
     -fx-text-fill: white; }
 
 .context-menu .menu-item:show-mnemonics .mnemonic-underline { -fx-stroke: null; }
