--- a/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset.css
+++ b/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset.css
@@ -19,3 +19,62 @@
 .textboxlist-autocomplete-result { margin: 0; padding: 5px; list-style-type: none; background: #eee; }
 .textboxlist-autocomplete-result-focus { background: #C6D9E4; }
 .textboxlist-autocomplete-highlight { background: #EEF0C4; font-weight: bold; }
+
+
+
+HTML {
+    font-size: 100%;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%; }
+
+BUTTON, INPUT, SELECT, TEXTAREA {
+    font-size: 100%;
+    line-height: inherit; }
+
+BUTTON, INPUT, SELECT {
+    text-transform: none; }
+
+BUTTON::-moz-focus-inner, INPUT::-moz-focus-inner {
+    border: 0;
+    padding: 0; }
+
+BUTTON {
+    cursor: pointer; }
+
+TEXTAREA {
+    overflow: auto;
+    resize: vertical;
+    vertical-align: top; }
+
+BODY {
+    margin: 0;
+    overflow: hidden; }
+
+.textboxlist, INPUT[type="text"], TEXTAREA {
+    font: 13px/18px 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', 'Bitstream Vera Sans', 'Liberation Sans', Arial, sans-serif; }
+
+.textboxlist-bits {
+    background: #fff;
+    -webkit-box-shadow: inset 0 1px 0 #f0f0f0;
+    box-shadow: inset 0 1px 0 #f0f0f0;
+    padding: 1px 4px; }
+
+.textboxlist-bit { margin: 0 4px 0 0; }
+
+.textboxlist-bit-box { margin-top: 3px; }
+
+.textboxlist-bit INPUT[type="text"], .textboxlist-bit TEXTAREA {
+    background: transparent;
+    border: 0 none transparent;
+    margin: 0;
+    vertical-align: baseline;
+    width: 100%;
+    padding: 0;
+    outline: none;
+    min-height: 24px; }
+
+TEXTAREA { resize: vertical; }
+
+.form_tags { margin: 0; }
+
+.textboxlist { width: 100%; }
