fileset add js-errors log

--- a/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
+++ b/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
@@ -51,6 +51,8 @@
                     alert("drop")
                 }
             })
+
+            alert("command:ready")
         })
 
         function requestFocus(){
