--- a/src/codeOrchestra/colt/core/ui/components/logVisualizer/html/log-visualizer-webview.html
+++ b/src/codeOrchestra/colt/core/ui/components/logVisualizer/html/log-visualizer-webview.html
@@ -19,6 +19,10 @@
     <img src="legend.png" style="position:absolute; top:47px; left:12px;" />
 
 <script>
+    $(function(){
+        alert("command:ready");
+    });
+
     var stopped = true;
 
     var context, messages = [], msPerColumn = 1000;
