--- a/src/codeOrchestra/colt/core/ui/style/main.css
+++ b/src/codeOrchestra/colt/core/ui/style/main.css
@@ -522,6 +522,11 @@
     -fx-effect: dropshadow(gaussian, #0052b8,  0, 0, 0, -1px);
     -fx-text-fill: white; }
 
+.context-menu .menu-item:focused .text,
+.context-menu .menu-item:hover .text {
+    -fx-effect: null; }
+
+
 .context-menu .menu-item:show-mnemonics .mnemonic-underline { -fx-stroke: null; }
 
 /* Player */
