log view performance fix

--- a/src/codeOrchestra/colt/core/ui/components/logVisualizer/html/log-visualizer-webview.html
+++ b/src/codeOrchestra/colt/core/ui/components/logVisualizer/html/log-visualizer-webview.html
@@ -34,10 +34,12 @@
         context = document.getElementById("canvas").getContext("2d");
 
         resizeCanvas();
-
         setInterval(draw, 345);
+        alert("command:ready");
+        setInterval(function(){
+            alert("command:flush")
+        }, 100)
 
-        alert("ready");
     }
 
     function currentTime () {
