--- a/src/codeOrchestra/colt/core/ui/components/logVisualizer/html/log-visualizer-webview.html
+++ b/src/codeOrchestra/colt/core/ui/components/logVisualizer/html/log-visualizer-webview.html
@@ -64,6 +64,14 @@
             }
         }
         messages.unshift(m);
+
+        // CJ-853
+        // мессаги приходят не чаще чем каждые 0.1с
+        // на большом экране может поместиться график на <5 минут
+        // итого, имеем 5 * 60 / 0.1 = 3000 необходимых данных
+        // всё, что больше, не нужно
+        if (messages.length > 5000) messages.pop();
+
 //        alert ("Received " + m.counts[0] + " errors, " + m.counts[1] + " warnings, " + m.counts[2] + " infos");
     }
 
