remove "New JS Project"

--- a/src/codeOrchestra/colt/core/ui/components/welcomeScreen/html/welcome-screen.html
+++ b/src/codeOrchestra/colt/core/ui/components/welcomeScreen/html/welcome-screen.html
@@ -210,7 +210,7 @@
     <div class="col col-first">
         <ul class="m-new">
             <li><a href="javascript:alert('new-as:0')">New ActionScript Project</a></li>
-            <li><a href="javascript:alert('new-js:0')">New JavaScript Project</a></li>
+            <!--<li><a href="javascript:alert('new-js:0')">New JavaScript Project</a></li>-->
         </ul>
 
         <ul class="m-open">
