Remove unused imports

--- a/src/main/resources/vova/fieldsets.fxml
+++ b/src/main/resources/vova/fieldsets.fxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.paint.*?>
-
+<?import java.lang.String?>
+<?import java.net.URL?>
 <ScrollPane prefHeight="760" prefWidth="500" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
 <VBox>
 
