--- a/src/main/resources/vova/player.fxml
+++ b/src/main/resources/vova/player.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-
-<AnchorPane prefHeight="400" prefWidth="600" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<?import java.net.URL?>
+<AnchorPane prefHeight="400" prefWidth="600" xmlns="http://javafx.com/javafx/2.2">
 <children>
     <StackPane layoutX="145" layoutY="166" minHeight="-Infinity" minWidth="-Infinity" prefHeight="94" prefWidth="206" styleClass="player-box">
     <children>
