Remove unused imports and small cleanup

--- a/src/main/resources/fieldsets.fxml
+++ b/src/main/resources/fieldsets.fxml
@@ -141,7 +141,7 @@
 </VBox>
 
     <stylesheets>
-        <URL value="@../codeOrchestra/colt/core/ui/style/main.css" />
+        <URL value="@codeOrchestra/colt/core/ui/style/main.css" />
     </stylesheets>
 
 </ScrollPane>
