--- a/src/main/resources/dialog-hidden-details.fxml
+++ b/src/main/resources/dialog-hidden-details.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
@@ -16,7 +15,7 @@
         <children>
             <ImageView fitHeight="48" fitWidth="48" preserveRatio="true" smooth="false" focusTraversable="true" AnchorPane.topAnchor="0" AnchorPane.leftAnchor="0">
             <image>
-            <Image url="@../codeOrchestra/colt/core/ui/style/images/messages/warning-48x48.png" />
+            <Image url="@codeOrchestra/colt/core/ui/style/images/messages/error-48x48.png" />
             </image>
             </ImageView>
             <Label text="Error while trying start the fcsh process" styleClass="h1" AnchorPane.topAnchor="17" AnchorPane.leftAnchor="69" AnchorPane.rightAnchor="0" />
@@ -25,13 +24,7 @@
 
         <AnchorPane>
         <children>
-            <TextArea minHeight="-1" prefHeight="240" prefWidth="0" wrapText="true"  AnchorPane.topAnchor="17" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" />
-        </children>
-        </AnchorPane>
-
-        <AnchorPane>
-        <children>
-            <Button text="Hide details" styleClass="btn-hide-dialog" focusTraversable="true" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="0" />
+            <Button text="Show details" styleClass="btn-show" focusTraversable="true" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="0" />
             <Button text="OK" styleClass="btn-done" defaultButton="true" focusTraversable="true" prefWidth="67" AnchorPane.topAnchor="10" AnchorPane.rightAnchor="0" />
         </children>
         </AnchorPane>
@@ -43,6 +36,6 @@
     </padding>
 
     <stylesheets>
-    <URL value="@../codeOrchestra/colt/core/ui/style/main.css" />
+    <URL value="@codeOrchestra/colt/core/ui/style/main.css" />
     </stylesheets>
 </VBox>
