--- a/src/main/resources/fieldsets.fxml
+++ b/src/main/resources/fieldsets.fxml
@@ -5,137 +5,122 @@
 <?import javafx.scene.layout.*?>
 <?import java.lang.String?>
 <?import java.net.URL?>
-<ScrollPane prefHeight="760" prefWidth="500" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<ScrollPane prefHeight="760" prefWidth="500" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
 <VBox>
 
 <!-- First Fieldset -->
     <VBox fx:id="buildVB" styleClass="fieldset" maxWidth="640.0">
-    <children>
+
+        <padding>
+            <Insets top="26" bottom="23"/>
+        </padding>
 
         <Label text="Fieldset Label" styleClass="legend">
             <VBox.margin>
-            <Insets bottom="-2" left="19" />
+                <Insets bottom="-2" left="19"/>
             </VBox.margin>
         </Label>
 
         <AnchorPane>
-        <children>
-            <Label layoutY="23" text="Output file name:" AnchorPane.leftAnchor="19" AnchorPane.rightAnchor="48" />
-            <TextField fx:id="fileNameTF" layoutY="42" prefHeight="30" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="86" />
-        </children>
+            <Label layoutY="23" text="Output file name:" AnchorPane.leftAnchor="19" AnchorPane.rightAnchor="48"/>
+            <TextField fx:id="fileNameTF" layoutY="42" prefHeight="30" AnchorPane.leftAnchor="10"
+                       AnchorPane.rightAnchor="86"/>
         </AnchorPane>
 
         <AnchorPane>
-        <children>
-            <Label layoutY="23" text="Output path:" AnchorPane.leftAnchor="19" AnchorPane.rightAnchor="48" />
-            <TextField fx:id="outPathTF" layoutY="42" prefHeight="30" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="86" />
-            <Button focusTraversable="false" onAction="#outputPathBrowseHandler" layoutY="42.0" prefHeight="30" prefWidth="67" styleClass="button" text="Browse" AnchorPane.rightAnchor="10" />
-        </children>
+            <Label layoutY="23" text="Output path:" AnchorPane.leftAnchor="19" AnchorPane.rightAnchor="48"/>
+            <TextField fx:id="outPathTF" layoutY="42" prefHeight="30" AnchorPane.leftAnchor="10"
+                       AnchorPane.rightAnchor="86"/>
+            <Button focusTraversable="false" onAction="#outputPathBrowseHandler" layoutY="42.0" prefHeight="30"
+                    prefWidth="67" styleClass="button" text="Browse" AnchorPane.rightAnchor="10"/>
         </AnchorPane>
 
         <AnchorPane>
-        <children>
             <ChoiceBox fx:id="playerVersionCB" layoutY="33" AnchorPane.leftAnchor="10">
-            <String fx:value="15.1.1" />
-            <String fx:value="/2" />
-            <String fx:value="/3"/>
-            <String fx:value="/4"/>
+                <String fx:value="15.1.1"/>
+                <String fx:value="/2"/>
+                <String fx:value="/3"/>
+                <String fx:value="/4"/>
             </ChoiceBox>
-            <Label fx:id="errorLabel" layoutY="41" AnchorPane.leftAnchor="115" AnchorPane.rightAnchor="10" text="Incorrect Flex SDK path specified" styleClass="error" />
-        </children>
+            <Label fx:id="errorLabel" layoutY="41" AnchorPane.leftAnchor="115" AnchorPane.rightAnchor="10"
+                   text="Incorrect Flex SDK path specified" styleClass="error"/>
         </AnchorPane>
 
         <AnchorPane>
-        <children>
-            <CheckBox fx:id="rslCB" layoutY="31" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" text="Use Framework as Runtime Shared Library (RSL)" />
-        </children>
+            <CheckBox fx:id="rslCB" layoutY="31" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10"
+                      text="Use Framework as Runtime Shared Library (RSL)"/>
         </AnchorPane>
 
         <AnchorPane>
-        <children>
-            <CheckBox fx:id="localeCB" text="Non-default locale settings:" layoutY="38" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" />
-            <TextField fx:id="localeTF" layoutY="58" prefHeight="30" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="86" />
-        </children>
+            <CheckBox fx:id="localeCB" text="Non-default locale settings:" layoutY="38" AnchorPane.leftAnchor="10"
+                      AnchorPane.rightAnchor="10"/>
+            <TextField fx:id="localeTF" layoutY="58" prefHeight="30" AnchorPane.leftAnchor="10"
+                       AnchorPane.rightAnchor="86"/>
         </AnchorPane>
-
-    </children>
-
-        <padding>
-        <Insets top="26" bottom="23" />
-        </padding>
 
     </VBox><!-- / First Fieldset -->
 
 <!-- Second Fieldset -->
     <VBox styleClass="fieldset" maxWidth="640">
-    <children>
-        <AnchorPane>
-        <children>
-            <Label layoutY="23" text="Output file name:" AnchorPane.leftAnchor="19" AnchorPane.rightAnchor="48" />
-            <TextField layoutY="42" prefHeight="30" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="86" />
-        </children>
-        </AnchorPane>
-
-        <AnchorPane>
-        <children>
-            <Label layoutY="23" text="Output path:" AnchorPane.leftAnchor="19" AnchorPane.rightAnchor="48" />
-            <TextField layoutY="42" prefHeight="30" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="86" />
-            <Button focusTraversable="false" onAction="#outputPathBrowseHandler" layoutY="42" prefHeight="30" prefWidth="67" styleClass="button" text="Browse" AnchorPane.rightAnchor="10" />
-        </children>
-        </AnchorPane>
-
-    </children>
 
         <padding>
-        <Insets top="3" bottom="23" />
+            <Insets top="3" bottom="23"/>
         </padding>
+
+        <AnchorPane>
+            <Label layoutY="23" text="Output file name:" AnchorPane.leftAnchor="19" AnchorPane.rightAnchor="48"/>
+            <TextField layoutY="42" prefHeight="30" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="86"/>
+        </AnchorPane>
+
+        <AnchorPane>
+            <Label layoutY="23" text="Output path:" AnchorPane.leftAnchor="19" AnchorPane.rightAnchor="48"/>
+            <TextField layoutY="42" prefHeight="30" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="86"/>
+            <Button focusTraversable="false" onAction="#outputPathBrowseHandler" layoutY="42" prefHeight="30"
+                    prefWidth="67" styleClass="button" text="Browse" AnchorPane.rightAnchor="10"/>
+        </AnchorPane>
 
     </VBox><!-- / Second Fieldset -->
 
 <!-- Third Fieldset -->
     <VBox styleClass="fieldset" maxWidth="640">
-    <children>
+
+        <padding>
+            <Insets top="26" bottom="23"/>
+        </padding>
 
         <Label text="Fieldset Label" styleClass="legend">
             <VBox.margin>
-            <Insets bottom="-2" left="19" />
+                <Insets bottom="-2" left="19"/>
             </VBox.margin>
         </Label>
 
         <AnchorPane>
-        <children>
-            <Label layoutY="23" text="Output file name:" AnchorPane.leftAnchor="19" AnchorPane.rightAnchor="48" />
-            <TextField layoutY="42" prefHeight="30" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="86" />
-        </children>
+            <Label layoutY="23" text="Output file name:" AnchorPane.leftAnchor="19" AnchorPane.rightAnchor="48"/>
+            <TextField layoutY="42" prefHeight="30" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="86"/>
         </AnchorPane>
 
         <AnchorPane>
-        <children>
-            <CheckBox fx:id="customConfCB" text="Use custom compiler configuration file" layoutY="22" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" />
-            <TextField fx:id="customConfTF" layoutY="42" prefHeight="30" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="86" />
-            <Button fx:id="customConfBtn" onAction="#customConfBrowseHandler" focusTraversable="false" layoutY="42" prefHeight="30" prefWidth="67" styleClass="button" text="Browse" AnchorPane.rightAnchor="10" />
-        </children>
+            <CheckBox fx:id="customConfCB" text="Use custom compiler configuration file" layoutY="22"
+                      AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10"/>
+            <TextField fx:id="customConfTF" layoutY="42" prefHeight="30" AnchorPane.leftAnchor="10"
+                       AnchorPane.rightAnchor="86"/>
+            <Button fx:id="customConfBtn" onAction="#customConfBrowseHandler" focusTraversable="false" layoutY="42"
+                    prefHeight="30" prefWidth="67" styleClass="button" text="Browse" AnchorPane.rightAnchor="10"/>
         </AnchorPane>
 
         <AnchorPane>
-        <children>
-            <RadioButton fx:id="defaultRBtn" text="System default application" toggleGroup="$launcher" layoutY="22" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" />
-        </children>
+            <RadioButton fx:id="defaultRBtn" text="System default application" toggleGroup="$launcher" layoutY="22"
+                         AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10"/>
         </AnchorPane>
 
         <AnchorPane>
-        <children>
-            <RadioButton fx:id="playerRBtn" text="Flash Player" toggleGroup="$launcher" layoutY="20" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" />
-            <TextField fx:id="playerTF" layoutY="40" prefHeight="30" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="86" />
-            <Button fx:id="browsBtn" onAction="#browseHandler" focusTraversable="false" layoutY="40" prefHeight="30" prefWidth="67" styleClass="button" text="Browse" AnchorPane.rightAnchor="10" />
-        </children>
+            <RadioButton fx:id="playerRBtn" text="Flash Player" toggleGroup="$launcher" layoutY="20"
+                         AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10"/>
+            <TextField fx:id="playerTF" layoutY="40" prefHeight="30" AnchorPane.leftAnchor="10"
+                       AnchorPane.rightAnchor="86"/>
+            <Button fx:id="browsBtn" onAction="#browseHandler" focusTraversable="false" layoutY="40" prefHeight="30"
+                    prefWidth="67" styleClass="button" text="Browse" AnchorPane.rightAnchor="10"/>
         </AnchorPane>
-
-    </children>
-
-        <padding>
-        <Insets top="26" bottom="23" />
-        </padding>
 
     </VBox><!-- / Third Fieldset -->
 </VBox>
