--- a/src/main/resources/codeOrchestra/colt/core/ui/components/welcomeScreen/html/welcome-screen.html
+++ b/src/main/resources/codeOrchestra/colt/core/ui/components/welcomeScreen/html/welcome-screen.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8">
     <title></title>
-
     <style type="text/css">
         HTML {
             font-size: 100%;
@@ -180,7 +179,7 @@
         }
     </style>
 
-    <script src="../../shared/jquery.js" type="text/javascript" charset="utf-8"></script>
+    <script src="localresource:../../shared/jquery.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" charset="utf-8">
         $(function () {
             alert("loaded")
@@ -202,7 +201,7 @@
 <body>
 
 <header role="banner">
-    <img src="banner.png" alt="COLT: Code Orchestra Livecoding Tool" width="598" height="97">
+    <img src="localresource:./banner.png" alt="COLT: Code Orchestra Livecoding Tool" width="598" height="97">
 </header>
 
 <div role="main">
