Switch focus button in Dialog

--- a/src/main/resources/codeOrchestra/colt/core/ui/style/main.css
+++ b/src/main/resources/codeOrchestra/colt/core/ui/style/main.css
@@ -1058,6 +1058,10 @@
 .h1 .text {
     -fx-font: bold 16px 'Arial'; }
 
+.button:focused {
+    -fx-focus-color: transparent;
+    -fx-background-insets: -1.4, 0, 1, 2;
+}
 /*
 |-------------------------------------------------------------------------------
 | ProgressIndicator | Aquafx
